# open-x-database

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
client/: CMakeLists.txt  ClientSession.cpp  ClientSession.h  DatabaseConnection.cpp  DatabaseConnection.h  DatabaseTcpConnector.cpp  DatabaseTcpConnector.h  main.cpp
cmake/: FindLevelDB.cmake
examples/: CMakeLists.txt  README.md  main.cpp
examples/cmake/: Findomxdb.cmake
include/omx/: BinaryStorage.h  Bytes.h  Database.h  DatabaseConnector.h  DatabaseServer.h  Key.h  Options.h  Request.h  Response.h  Transaction.h
include/omx/internal/: Export.h  FastPimpl.h
server/: Acceptor.cpp  Acceptor.h  Aliases.h  CMakeLists.txt  Server.cpp  Server.h  ServerBase.cpp  ServerBase.h  ServerSession.cpp  Session.cpp  Session.h  main.cpp
src/: BinaryStorage.cpp  BinaryStorageImpl.cpp  BinaryStorageImpl.h  BloomFilter.h  Bytes.cpp  CMakeLists.txt  Database.cpp  Entry.cpp  Entry.h  File.cpp  File.h  Index.cpp  Index.h  Key.cpp  KeyComparator.cpp  KeyComparator.h  MemTable.cpp  MemTable.h  MemTableKey.h  OperationTypes.h  Options.cpp  OptionsImpl.cpp  OptionsImpl.h  Request.cpp  Response.cpp  SSTable.cpp  SSTable.h  SSTableIndex.cpp  SSTableIndex.h  SSTableRow.cpp  SSTableRow.h  StorageEngine.cpp  StorageEngine.h  Transaction.cpp  TransactionImpl.cpp  TransactionImpl.h  WriteAheadLog.cpp  WriteAheadLog.h
src/Compression/: CMakeLists.txt  CompressionFactory.cpp  CompressionType.h  ICompression.h  LZ4CompressionAdapter.cpp  LZ4CompressionAdapter.h  NoCompression.cpp  NoCompression.h  SnappyCompressionAdapter.cpp  SnappyCompressionAdapter.h
src/Hasher/: CMakeLists.txt  CityHash128Adapter.cpp  CityHash128Adapter.h  HashingFactory.cpp  IHasher.h  MurmurHash3Adapter.cpp  MurmurHash3Adapter.h  NoHash.cpp  NoHash.h
src/Hasher/CityHash/: City.cpp  City.h  CityCrc.h
src/Logging/: Logging.h
src/Networking/: Acceptor.cpp  Acceptor.h  Aliases.h  ClientSession.cpp  ClientSession.h  DatabaseConnector.cpp  DatabaseConnectorImpl.cpp  DatabaseConnectorImpl.h  DatabaseServer.cpp  DatabaseServerImpl.cpp  DatabaseServerImpl.h  MainClient.cpp  MainServer.cpp  ServerBase.cpp  ServerBase.h  ServerSession.cpp  ServerSession.h  UUID.cpp  UUID.h  main.cpp
test/: CMakeLists.txt  Test.cpp
